# mumble

./: main.cpp
mumble/: CMakeLists.txt  main.cpp  mumble.cpp  mumble.h
scripts/: build.bat  build.sh
